KARAF-819 improve feature naming: feature projects have full artifactId, features include 'standard', 'enterprise' etc segment
git-svn-id: https://svn.apache.org/repos/asf/karaf/trunk@1163497 13f79535-47bb-0310-9956-ffa450edef68